--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,7 @@ tensorflow>=2.16.1
 keras>=3.3.0
 
 # --- Web API & Deployment ---
-fastapi>=0.110.0
-uvicorn>=0.29.0
-pydantic>=2.6.0
+bentoml>=1.4.34
 
 # --- Visualization & Reports ---
 matplotlib>=3.8.0
